--- a/src/resources/sass/app.sass
+++ b/src/resources/sass/app.sass
@@ -1,6 +1,16 @@
 $dourado: #daa520;
 $fgnavbar: #fafafa;
     
+@keyframes anima-dlgbox {
+    0% {
+       opacity: 0% ;    
+    }
+    100% {
+       opacity: 100%;
+       //top: calc(50vw - 125px)     
+    }
+}
+            
 @keyframes anima-fundo{
     0%{
         background: radial-gradient( circle at 1%,  #0e0ad8 100%, #00a2ff 45%, #3711a9 100% ) no-repeat;
